--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,6 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.2.0-alpha02'
 
+    //LiveData/ViewModels
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
 }
