Started on retrofit example, fixed navigation bug
Signed-off-by: Bailey Tye <bailey@vogcalgaryappdeveloper.com>

--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,9 @@ buildscript {
     }
 
     ext {
-        version_navigation = '2.2.0-rc03'
+        version_navigation = '2.2.0-rc04'
+        version_kotlin_coroutines = '1.3.3'
+        version_retrofit_coroutines_adapter = ''
     }
 }
 
