--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,10 +60,13 @@ dependencies {
 
     implementation "com.squareup.retrofit2:retrofit:2.7.0"
     implementation "com.squareup.retrofit2:converter-moshi:2.7.0"
+
     implementation "com.squareup.moshi:moshi-kotlin:1.9.2"
+
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
 
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$version_kotlin_coroutines"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$version_kotlin_coroutines"
 
-    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.0'
+    //debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.0'
 }
