--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,5 +68,7 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$version_kotlin_coroutines"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$version_kotlin_coroutines"
 
+    implementation "androidx.work:work-runtime-ktx:$version_work"
+
     //debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.0'
 }
