--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ buildscript {
     ext {
         version_navigation = '2.2.0-rc04'
         version_kotlin_coroutines = '1.3.3'
-        version_retrofit_coroutines_adapter = ''
+        version_work = '2.2.0'
     }
 }
 
