--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,7 +52,24 @@ dependencies {
     testImplementation 'org.robolectric:robolectric:4.3.1'
     testImplementation 'androidx.work:work-testing:2.2.0'
     testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.3"
+
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.3"
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.2.0'
+    debugImplementation ("androidx.fragment:fragment-testing:1.1.0") {
+        // exclude androidx.test:core while fragment_testing depends on 1.1.0
+        exclude group: 'androidx.test', module: 'core'
+    }
+    androidTestImplementation "androidx.test:core:1.2.0"
+    androidTestImplementation "org.mockito:mockito-core:3.2.4"
+
+    //Need this for Mockito to mock final classes
+    androidTestImplementation "com.linkedin.dexmaker:dexmaker-mockito:2.25.1"
+
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'androidx.test.espresso:espresso-idling-resource:3.2.0'
 
     //Navigation
     implementation "androidx.navigation:navigation-fragment-ktx:$version_navigation"
